@@ -1,3 +1,11 @@
+2004-05-30  Kai Grossjohann  <kai.grossjohann@gmx.net>
+
+	Sync with trunk.
+
+	* tramp.el (tramp-let-maybe): ReportReverse args of `get'.
+	(tramp-let-maybe): Move to an earlier spot in the file.  Patch by
+	Andreas Schwab.
+
 2004-05-29  Michael Albinus  <michael.albinus@gmx.de>
 
 	Version 2.0.41 released.
